Bug 168406 - Difference between PowerPoint and Impress when displaying some slides
Summary: Difference between PowerPoint and Impress when displaying some slides
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: All All
: medium normal
Assignee: Dave Gilbert
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: PPTX-Paragraph
  Show dependency treegraph
 
Reported: 2025-09-14 10:19 UTC by Nick
Modified: 2025-11-02 02:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
PPTX file slide 9 and 11 act different in Impress to PP (14.86 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-09-14 10:23 UTC, Nick
Details
Reduced version of original, just p11, just the bad list (1.03 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-09-16 23:54 UTC, Dave Gilbert
Details
a pptx generated by one drive whose numbering is wrong (29.62 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-10-08 13:58 UTC, Dave Gilbert
Details
A 2 level version (31.50 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-10-08 13:59 UTC, Dave Gilbert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nick 2025-09-14 10:19:38 UTC
Description:
I had a small presentation 12 slides prepared in powerpoint when i tried to display using impress 2 slides were different one was simply a spacing difference but one changed the figures. This happened on 2 machines

Steps to Reproduce:
1.I am happy to send you the pptx file to look at the problem it is 15 mb in size
2.
3.

Actual Results:
Slides 9 has different spacing and slide 11 has incorrect data

Expected Results:
If data displays correctly in PowerPoint it should display correctly in Impress


Reproducible: Always


User Profile Reset: No

Additional Info:
The one machine was a brand new install of LibreOffice both machines are on 25.8.04 I have just downloaded 25.8.1 and it the problem is the same.
It looks like the spacing problem is caused by Impress handling right aligned tabs differently if there is a space after the text
It looks like the data input on PowerPoint was confused but displayed correctly and Impress read the previous line and tried to put auto paragraph numbering on which changed the displayed data. PP displayed the correct data.
Comment 1 Nick 2025-09-14 10:23:11 UTC
Created attachment 202828 [details]
PPTX file slide 9 and 11 act different in Impress to PP

Slide 9 and 11 behave differently in PP to Impress
Comment 2 Dave Gilbert 2025-09-14 17:39:37 UTC
Confirmed this vs onedrive.

So the differences seem to be:

  a) Slide 9 - slight different horizontal minor offsets in numbers
  b) Slide 11 - Vertical spacing different on the list of names
  c) Slide 11 - ???!!! Wth the numbers in the stats are completely out!

(I thought it was odd you had so many people die of bee stings....)
For ref on onedrive this shows 3 biking related deaths and 1 bee string death.
Comment 3 Dave Gilbert 2025-09-14 20:23:35 UTC
(In reply to Dave Gilbert from comment #2)

> (I thought it was odd you had so many people die of bee stings....)
> For ref on onedrive this shows 3 biking related deaths and 1 bee string
> death.

This, slide 11 numbers, is a 'numbered list' problem.  What we have here looks like an interleaving of a numbered list with some other lines, and some of the numbered list items are edited in the original, but we're not getting that; so:


10 Cancer, 11 Biking, 12 Bee Sting, 13 Heart attack are actually the numbered list
where as the interleaved 2 Emphysema, 1 scuba diving, and 7 unsure are just normal paragraphs - And they are right

Now, that numbered list is originally 10,3,1,1  so I think somehow the numbering is overridden in the original and we're losing that.

If I right click on th e'biking related' and see the Bullents & Numbering properties it shows 'start at' 3 - but it's showing 11 so hmm.
Comment 4 Dave Gilbert 2025-09-15 00:50:02 UTC
Looking at the input xml we've got a good selection, at the start we have:

  <a:buAutoNum type="arabicPlain" startAt="10"/>                     
</a:pPr>                                                             
            ....
 <a:t>Cancer </a:t>
</a:r>

....

  <a:buAutoNum type="arabicPlain" startAt="3"/>
</a:pPr>
  <a:t>Biking related</a:t>
</a:r>

the Emphysema one doesn't have any startAt but just has it embedded in the text:
 <a:t>2  Emphysema</a:t>

Oddly Bee sting is autonumber but without a start value:
              <a:buAutoNum type="arabicPlain"/>
              <a:t>Bee Sting</a:t>

and for added variety, the 'Unsure' entry has a separate piece of text for it's '7'
Comment 5 Dave Gilbert 2025-09-16 23:54:06 UTC
Created attachment 202851 [details]
Reduced version of original, just p11, just the bad list

I've cut the original down (using OneDrive's version of ppt) to just page 11, and just the list of incorrect numbers.
Comment 6 Dave Gilbert 2025-09-20 14:01:43 UTC
I'm having a poke at this one; I've found the odp import code that does it, and I've found the ppt import code that does it.
I think we need some "ParaIsNumberingRestart" properties.
Comment 7 Dave Gilbert 2025-10-07 01:07:17 UTC
Right, I've got a hack working here; I'll clean it up and see if stuff tests OK
Comment 8 Dave Gilbert 2025-10-08 01:17:31 UTC
Halfway there.

There's (at least) two separate number reset mechanisms,  one is 
'startAt' :

 <a:buAutoNum type="arabicPlain" startAt="3"/>

I've got that working, so now we have the right number of biking
related death.

The second happens where the numbering restarts (to 1?), I'm not
totally sure on that, but I think it's when we get a buAutoNum after
we've seen a 'endParaRPr'.

With just the first one fixed (where I am at the moment) we go
from
  10,11,2,12,1,13,7
to
  10,3,2,*4,1,*5,7

but we're after: 
  10,3,2,1,1,1,7
Comment 9 Dave Gilbert 2025-10-08 13:58:23 UTC
Created attachment 203207 [details]
a pptx generated by one drive whose numbering is wrong

This is a simple case of the 2nd varient triggering.
Its numbers should be 1,2,3,1,2 but comes out as 1,2,3,4,5
Comment 10 Dave Gilbert 2025-10-08 13:59:36 UTC
Created attachment 203208 [details]
A 2 level version

This is a slightly more complex version of the second bug, it's numbering should be

1,2
  a,b  a,b
3,4

but currently comes out as 
1,2
  a,b c,d
3,4
Comment 11 Dave Gilbert 2025-10-14 01:07:21 UTC
My current world is closer - it fixes my two test files here...but not the original case2 in the original file.
In my test files the non-numbered elements are marked with buNone, in the original they just have no mark at all, which somehow I need to wrangle the same way.  Still progress.
Comment 12 Dave Gilbert 2025-10-14 14:39:38 UTC
OK, think I've got it working here both for the original numbering and both of my test cases.
Comment 13 Commit Notification 2025-10-30 14:56:54 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/656905c94c5a606665130e56e16cedbe3fd1b5c2

tdf#168406: oox: Add ParaIsNumberingRestart property

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2025-10-30 14:56:57 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/857e609d34f975d04abede09b0fdd278a1fc9a5f

tdf#168406: oox: Add mask to track numbered list

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2025-10-30 14:58:00 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8e2e7e1dfd65f018266fa11093c8ab1e0a48e420

tdf#168406: oox: Restart numbering on 'startAt'

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2025-10-30 15:02:03 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/faa921bfe2344a5247376b10c2f54b017762ba0e

tdf#168406: oox: Track numbered list state in Text body

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2025-10-30 15:02:05 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/56cb2a301acd0443e777094bda32a8e0d9e802ca

tdf#168406: oox: Restart numbering after non-numbered element

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2025-10-30 15:02:08 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d6b33766f044fbd8a85a5b19407867d4a10bd90e

tdf#168406: sd/qa: Add numbered list content check

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Dave Gilbert 2025-10-30 16:57:11 UTC
Right; the page 11 numbering screwup should now be fixed by the changes I just merged.

The page 9 stuff looks like a right hand tab; not sure what's going on there.
I'll drop the assigned off unless I start looking at it more.
Comment 20 Dave Gilbert 2025-11-01 02:09:25 UTC
Oh that looks possibly the same as:
https://bugs.documentfoundation.org/show_bug.cgi?id=115639

I do see that extra trailing space.
Comment 21 Dave Gilbert 2025-11-02 02:36:20 UTC
Given I fixed the numbering, and the tab problem is covered in tdf#115639 I'll close this one.

Thanks for reporting this!