tdf#168406: oox: Add ParaIsNumberingRestart property

When this property is enabled, LO will emit a
  text:start-value=
as part of the text:list-item.

Change-Id: I9c158bb14fac5e6e77bfc93d0168081a89c8ceb1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192160
Tested-by: Jenkins
Reviewed-by: David Gilbert <freedesktop@treblig.org>