oox/source/drawingml/textparagraphproperties.cxx
@@ -382,7 +382,7 @@ void BulletList::pushToPropMap( const ::oox::core::XmlFilterBase* pFilterBase, P
 }
 
 TextParagraphProperties::TextParagraphProperties()
-: mnLevel( 0 )
+: mnLevel( 0 ), mbRestartNumbering( false )
 {
 }
 
@@ -407,6 +407,8 @@ void TextParagraphProperties::apply( const TextParagraphProperties& rSourceProps
         moParaAdjust = rSourceProps.moParaAdjust;
     if( rSourceProps.maLineSpacing.bHasValue )
         maLineSpacing = rSourceProps.maLineSpacing;
+    if( rSourceProps.mbRestartNumbering )
+        mbRestartNumbering = rSourceProps.mbRestartNumbering;
 }
 
 void TextParagraphProperties::pushToPropSet( const ::oox::core::XmlFilterBase* pFilterBase,
@@ -530,6 +532,11 @@ void TextParagraphProperties::pushToPropSet( const ::oox::core::XmlFilterBase* p
     else
     {
         aPropSet.setProperty( PROP_ParaLineSpacing, css::style::LineSpacing( css::style::LineSpacingMode::PROP, 100 ));
+    }
+
+    if ( mbRestartNumbering )
+    {
+        aPropSet.setProperty( PROP_ParaIsNumberingRestart, true);
     }
 }
 
